k8s/supabase/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supabase
  labels:
    vector.dev/include: yes
