k8s/supabase/base/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: supabase/gotrue
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        # readinessProbe:
        #   exec:
        #     command: ["wget","--no-verbose","--tries=1","--spider","http://localhost:9999/health"]
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        # livenessProbe:
        #   exec:
        #     command: ["wget","--no-verbose","--tries=1","--spider","http://localhost:9999/health"]
        #   initialDelaySeconds: 30
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        #   failureThreshold: 3
