k8s/supabase/base/imgproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgproxy
  labels:
    app: imgproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imgproxy
  template:
    metadata:
      labels:
        app: imgproxy
    spec:
      containers:
      - name: imgproxy
        image: darthsim/imgproxy
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - name: imgproxy-volume
          mountPath: /var/lib/storage
      volumes:
      - name: imgproxy-volume
        persistentVolumeClaim:
          claimName: imgproxy-pvc
