k8s/supabase/base/rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
  labels:
    app: rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: postgrest/postgrest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
