k8s/supabase/base/vector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector
  labels:
    app: vector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vector
  template:
    metadata:
      labels:
        app: vector
    spec:
      serviceAccountName: vector-sa
      containers:
      - name: vector
        image: timberio/vector
        args: ["--config", "/etc/vector/tmp/temp.yml"]
        # ports:
        # - containerPort: 4000
        #   name: vector
        # resources:
        #   requests:
        #     memory: "256Mi"
        #     cpu: "100m"
        #   limits:
        #     memory: "2Gi"
        #     cpu: "500m"
        volumeMounts:
        - name: vector-template
          mountPath: /etc/vector/tmp/temp.yml
          subPath: temp.yml
      volumes:
      - name: vector-template
        emptyDir: {}
      - name: vector-volume
        configMap:
          name: vector-config
