k8s/supabase/base/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  labels:
    app: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
      - name: analytics
        image: supabase/logflare
        ports:
        - containerPort: 4000
          name: analytics
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: analytics
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: analytics
