k8s/supabase/base/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app: db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: supabase/postgres
        # command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf", "-c", "log_min_messages=fatal"]
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        # readinessProbe:
        #   exec:
        #     command: ["pg_isready", "-U", "postgres", "-h", "localhost"]
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        #   failureThreshold: 10
        # livenessProbe:
        #   exec:
        #     command: ["pg_isready", "-U", "postgres", "-h", "localhost"]
        #   initialDelaySeconds: 30
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        #   failureThreshold: 10
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        - name: initdb-scripts-data
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: db-pvc
      - name: initdb-scripts-data
        emptyDir: {}
      - name: custom-init-scripts
        configMap:
          name: postgres-init-scripts
      - name: custom-migrations
        configMap:
          name: postgres-migration-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
