k8s/supabase/base/functions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: functions
  labels:
    app: functions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: functions
  template:
    metadata:
      labels:
        app: functions
    spec:
      containers:
      - name: functions
        image: supabase/edge-runtime
        command: ["/bin/sh", "-c"]
        args:
        - |
          # Extraction des fichiers de fonctions
          tar -xvf /home/deno/functions/tmp/functions.tar -C /home/deno/functions/
          
          # Démarrage du runtime
          edge-runtime start --main-service /home/deno/functions/main
        # resources:
        #   requests:
        #     memory: "256Mi"
        #     cpu: "100m"
        #   limits:
        #     memory: "2Gi"
        #     cpu: "500m"
        volumeMounts:
        - name: functions-volume
          mountPath: /home/deno/functions/tmp
      volumes:
      - name: functions-volume
        configMap:
          name: edge-functions-config
---
apiVersion: v1
kind: Service
metadata:
  name: functions
spec:
  selector:
    app: functions
  ports:
    - port: 9000
      targetPort: 9000
