k8s/supabase/base/kong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  labels:
    app: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
      - name: kong
        image: kong
        ports:
        - containerPort: 8000
        command: ["/bin/bash"]
        args: ["/scripts/wrapper.sh"]
        # resources:
        #   requests:
        #     memory: "256Mi"
        #     cpu: "100m"
        #   limits:
        #     memory: "2Gi"
        #     cpu: "500m"
        volumeMounts:
        - mountPath: /usr/local/kong/template.yml
          name: config
          subPath: template.yml
        - mountPath: /scripts
          name: wrapper
      volumes:
      - name: config
        configMap:
          name: kong-config
          defaultMode: 0777
          items:
          - key: template.yml
            path: template.yml
      - name: wrapper
        configMap:
          name: kong-config
          defaultMode: 0777
          items:
          - key: wrapper.sh
            path: wrapper.sh
---
apiVersion: v1
kind: Service
metadata:
  name: kong
spec:
  selector:
    app: kong
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  # - name: kong-admin
  #   port: 8001
  #   targetPort: 8001
  # - name: kong-https
  #   port: 8443
  #   targetPort: 8443
