k8s/supabase/base/realtime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime
  labels:
    app: realtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime
  template:
    metadata:
      labels:
        app: realtime
    spec:
      containers:
      - name: realtime
        image: supabase/realtime
        # resources:
        #   requests:
        #     memory: "256Mi"
        #     cpu: "100m"
        #   limits:
        #     memory: "2Gi"
        #     cpu: "500m"
        # readinessProbe:
        #   exec:
        #     command: ["curl","-sSfL","--head","-o","/dev/null","-H","Authorization: Bearer $(ANON_KEY)","http://localhost:4000/api/tenants/realtime-dev/health"]
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        # livenessProbe:
        #   exec:
        #     command: ["curl","-sSfL","--head","-o","/dev/null","-H","Authorization: Bearer $(ANON_KEY)","http://localhost:4000/api/tenants/realtime-dev/health"]
        #   initialDelaySeconds: 30
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        command: ["/bin/sh"]
        args: ["-c", "/app/bin/migrate && /app/bin/realtime eval 'Realtime.Release.seeds(Realtime.Repo)' && /app/bin/server"]
---
apiVersion: v1
kind: Service
metadata:
  name: realtime
spec:
  selector:
    app: realtime
  ports:
    - port: 4000
      targetPort: 4000
