k8s/supabase/base/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
  labels:
    app: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - name: storage
        image: supabase/storage-api:v1.22.17
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        volumeMounts:
          - name: storage-volume
            mountPath: /var/lib/storage
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  selector:
    app: storage
  ports:
  - port: 5000
    targetPort: 5000
