k8s/supabase/base/studio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studio
  labels:
    app: studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studio
  template:
    metadata:
      labels:
        app: studio
    spec:
    #TODO: manage initContainers to check analytics readiness
      # initContainers:
      # - name: check-db-ready
      #   image: postgres:13-alpine
      #   command: ['sh', '-c']
      #   args:
      #     - |
      #       echo "Waiting for database to be ready..."
      #       until pg_isready -h $(POSTGRES_HOST) -p $(POSTGRES_PORT) -U postgres; do
      #       echo "Waiting for database to start..."
      #         sleep 2
      #         done
      #     - echo "Database is ready"
      #   env:
      #   - name: PGPASSWORD
      #     value: $(POSTGRES_PASSWORD)
      #   envFrom:
      #     - configMapRef:
      #         name: common-config
      #     - secretRef:
      #         name: common-secrets
      containers:
      - name: studio
        image: supabase/studio
        ports:
        - containerPort: 3000
          name: studio
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: studio
spec:
  selector:
    app: studio
  ports:
    - port: 3000
      targetPort: 3000
