k8s/supabase/base/kong-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-v1-open
  annotations:
    konghq.com/plugins: cors
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth/v1/verify
      backendRefs:
        - name: supabase-auth
          port: 9999
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /verify

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-v1-open-callback
  annotations:
    konghq.com/plugins: cors
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth/v1/callback
      backendRefs:
        - name: supabase-auth
          port: 9999
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /callback

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-v1-open-authorize
  annotations:
    konghq.com/plugins: cors
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth/v1/authorize
      backendRefs:
        - name: supabase-auth
          port: 9999
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /authorize
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-v1
  annotations:
    konghq.com/plugins: cors,key-auth,acl-admin-anon
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth/v1/
      backendRefs:
        - name: supabase-auth
          port: 9999
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rest-v1
  annotations:
    konghq.com/plugins: cors,key-auth,acl-admin-anon
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /rest/v1/
      backendRefs:
        - name: supabase-rest
          port: 3000
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: graphql-v1
  annotations:
    konghq.com/plugins: cors,key-auth,graphql-transform,acl-admin-anon
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /graphql/v1
      backendRefs:
        - name: supabase-rest
          port: 3000
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /rpc/graphql
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: realtime-v1-ws
  annotations:
    konghq.com/plugins: cors,key-auth,acl-admin-anon
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /realtime/v1/
      backendRefs:
        - name: supabase-realtime
          port: 4000
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: realtime-dev.supabas-realtime
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /socket
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: realtime-v1-rest
  annotations:
    konghq.com/plugins: cors,key-auth,acl-admin-anon
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /realtime/v1/api
      backendRefs:
        - name: supabase-realtime
          port: 4000
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: realtime-dev.supabas-realtime
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /api
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: storage-v1
  annotations:
    konghq.com/plugins: cors
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /storage/v1/
      backendRefs:
        - name: supabase-storage
          port: 5000
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: functions-v1
  annotations:
    konghq.com/plugins: cors
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /functions/v1/
      backendRefs:
        - name: supabase-functions
          port: 9000
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: analytics-v1
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /analytics/v1/
      backendRefs:
        - name: supabase-analytics
          port: 4000
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meta
  annotations:
    konghq.com/plugins: key-auth,acl-admin
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pg/
      backendRefs:
        - name: supabase-meta
          port: 8080
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
  annotations:
    konghq.com/plugins: cors,basic-auth
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: supabase-studio
          port: 3000
